# qrab

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  PLAN.md  README.md  flake.nix
.github/workflows/: build.yml  test.yml
src/: extract.rs  layout.rs  lib.rs  main.rs  qr.rs  select.rs
tests/: integration.rs
