[package]
name = "qrab"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal-friendly QR code generator for piped URLs"
repository = "https://github.com/lucernae/qrab"
readme = "README.md"
keywords = ["qr", "qrcode", "terminal", "cli", "url"]
categories = ["command-line-utilities"]

[dependencies]
linkify = "0.10"
qrcode = "0.14"
dialoguer = "0.12"
console = "0.16"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
